[package]
name = "jsrs"
version = "0.1.0"
authors = [
    "Terry Sun <terrynsun@gmail.com>",
    "Saghm Rossi <saghmrossi@gmail.com>"
]

[dependencies.jsrs-parser]
git = "https://github.com/rustoscript/js.rs-parser.git"
rev = "e96dd83"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common.git"
rev = "ad1e542"

[dependencies.french_press]
git = "https://github.com/rustoscript/french-press"
rev = "9bad095"

[dependencies.js-types]
git = "https://github.com/rustoscript/js-types.git"
rev = "f52e32f"

[dependencies]
rustyline = "0.2.0"
uuid = "0.1"
